redis-srv: set save param

--- a/redis-srv/docker-compose.yml
+++ b/redis-srv/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: redis
     container_name: redis-srv
     restart: unless-stopped
+    command: redis-server --save 3600 1
     ports:
       - "6379:6379"
     volumes:
