--- a/redis-replica-acl-srv/docker-compose.yml
+++ b/redis-replica-acl-srv/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3"
 
 services:
-  redis-acl-srv:
+  redis-replica-acl-srv:
     build: .
-    image: redis-acl-srv-img
-    container_name: redis-acl-srv
-    restart: unless-stopped
+    image: redis-replica-acl-srv-img
+    container_name: redis-replica-acl-srv
+    restart: "no"
     ports:
-      - "127.0.0.1:6379:6379"
+      - "127.0.0.1:63790:6379"
     networks:
       - redis-net
     logging:
@@ -19,4 +19,3 @@ services:
 networks:
   redis-net:
     external: true
-
