add memory management

--- a/redis-replica-acl-srv/redis.conf
+++ b/redis-replica-acl-srv/redis.conf
@@ -1,9 +1,12 @@
+# memory management
+maxmemory 500mb
+
 # replication setup
 replicaof redis-acl-srv 6379
 masteruser "replica-user"
 masterauth "pwd"
 
-# backup setup
+# snapshotting
 save 3600 1
 
 # ACL setup
