--- a/owncloud-srv/nginx-rproxy/proxy.conf
+++ b/owncloud-srv/nginx-rproxy/proxy.conf
@@ -1,15 +1,22 @@
 server {
     listen 80 default_server;
-    listen [::]:80 default_server;
-    server_name _;
+    #listen [::]:80 default_server;
+    server_tokens off;
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name _;
+    #listen [::]:443 ssl;
+    server_tokens off;
+
+    location / {
+        return 404;
+    }
+
     location /owncloud/ {
         include proxy_params;
+        client_max_body_size 200M;
         proxy_pass http://localhost:8080;
     }
 }
